2006-11-23  Bastien Nocera  <hadess@hadess.net>

	* src/totem-session.c: (totem_session_restore): Patch from
	Marek Schmidt <xschmi01@stud.fit.vutbr.cz> to fix restoring the
	session. The playlist expects URI, we fed it a local filename
	(Closes: Debian #399983)

2006-11-22  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_set_fullscreen): Fix compilation with NVTV support
	and the GStreamer backend (Closes: #378096)

2006-11-22  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemStringGlue.h: patch from Christian Persch to
	fix the Mozilla string compat code

2006-11-20  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h:
	* browser-plugin/totemStringGlue.h:
	* configure.in: detect Mozilla 1.7 and use the proper string functions,
	most of the code from Christian Persch (Closes: #375624)

2006-11-20  Christian Persch  <chpe@cvs.gnome.org>

	* brower-plugin/totemPlugin.cpp:
	Really fix test for supported schemes. Bug #375677.

2006-11-20  Christian Persch  <chpe@cvs.gnome.org>

	* brower-plugin/totemPlugin.cpp:
	Fix test for supported schemes. Bug #375677.

2006-11-19  Christian Persch  <chpe@cvs.gnome.org>

	* brower-plugin/totemPlugin.cpp:
	If 'hidden' attribute is set without value, assume we're
	hidden. Bug #376757.

2006-11-19  Christian Persch  <chpe@cvs.gnome.org>

	* brower-plugin/totemPlugin.cpp:
	Use GetURLNotify, bug #376736.
	Fix uninstalled plugin viewer binary name.

2006-11-19  Bastien Nocera  <hadess@hadess.net>

	* src/ev-sidebar.c: (ev_sidebar_close_clicked_cb): send the "closed"
	signal before hiding the sidebar, so that the sidebar button's state
	is correct after using the "Close" button (Closes: #376805)

2006-11-17  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/.cvsignore:
	* src/.cvsignore: upd

2006-11-17  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-volume.c: (bacon_volume_button_load_icons): updated