@@ -54,10 +54,10 @@
 
       <child>
 	<widget class="GtkVBox" id="vbox1">
-	  <property name="border_width">5</property>
+	  <property name="border_width">6</property>
 	  <property name="visible">True</property>
 	  <property name="homogeneous">False</property>
-	  <property name="spacing">12</property>
+	  <property name="spacing">18</property>
 
 	  <child>
 	    <widget class="GtkVBox" id="general_vbox">
